--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
       </section>
 
       <section class="trailer">
-        <video class="trailer__video"
+        <video
+          class="trailer__video"
           src="./videos/Marvel Studios' Black Widow _ Final Trailer.mp4"
           autoplay
           loop
@@ -169,6 +170,66 @@
               deal with people whose efforts she herself became a Widow.
             </p>
             <button class="btn">Watch now</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="series">
+        <div class="container">
+          <div class="title">
+            <h2 class="title__h">Series</h2>
+          </div>
+          <div class="series__wrap">
+            <div class="series__card">
+              <div class="bgr"></div>
+                <h3 class="series__card-title">Game of Thrones</h3>
+                <p class="series_-card-desc">
+                  The time of prosperity is drawing to a close, and the summer,
+                  which lasted almost a decade, is dying away. Around the center
+                  of power of the Seven Kingdoms, the Iron Throne, a conspiracy
+                  is ripening, and during this difficult time, the king decides
+                  to seek support from his youth friend Eddard Stark. In a world
+                  where everyone - from the king to the mercenary - is eager for
+                  power, intrigues and is ready to stick a knife in the back,
+                  there is ...
+                </p>
+                <button class="btn">Watch now</button>
+            </div>
+            <div class="series__card">
+              <div class="bgr"></div>
+              <span class="films__card-icon">
+                <i class="fad fa-play"></i>
+              </span>
+              <h3 class="series__card-title">Wanda Vision</h3>
+            </div>
+            <div class="series__card">
+              <div class="bgr"></div>
+              <span class="films__card-icon">
+                <i class="fad fa-play"></i>
+              </span>
+              <h3 class="series__card-title">The Flash</h3>
+            </div>
+            <div class="series__card">
+              <div class="bgr"></div>
+              <span class="films__card-icon">
+                <i class="fad fa-play"></i>
+              </span>
+              <h3 class="series__card-title">The Great</h3>
+            </div>
+            <div class="series__card">
+              <div class="bgr"></div>
+              <span class="films__card-icon">
+                <i class="fad fa-play"></i>
+              </span>
+              <h3 class="series__card-title">GOTHAM</h3>
+            </div>
+            <div class="series__card">
+              <div class="bgr"></div>
+              <span class="films__card-icon">
+                <i class="fad fa-play"></i>
+              </span>
+              <h3 class="series__card-title">The witcher</h3>
+            </div>
           </div>
         </div>
       </section>
